k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portifolio
spec:
  type: ClusterIP
  selector:
    app: portifolio
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
